@@ -34,6 +34,7 @@ import java.util.*;
 
 import static com.fs.starfarer.api.impl.campaign.procgen.themes.SalvageSpecialAssigner.MAX_EXCEPTIONAL_PODS_OFFICERS;
 import static com.fs.starfarer.api.ui.MapParams.GRID_SIZE_MAP_UNITS;
+import static org.tranquility.seedreporter.SEEDUtils.SETTING_RUN_ON_GAME_START;
 
 public class SEEDReport {
     public static boolean runOnGameStart;
@@ -65,8 +66,8 @@ public class SEEDReport {
         }
 
         if (SEEDUtils.LUNALIB_ENABLED)
-            runOnGameStart = Boolean.TRUE.equals(LunaSettings.getBoolean("seedreporter", "runSEEDReportOnGameStart"));
-        else runOnGameStart = modSettings.optBoolean("runSEEDReportOnGameStart", true);
+            runOnGameStart = Boolean.TRUE.equals(LunaSettings.getBoolean("seedreporter", SETTING_RUN_ON_GAME_START));
+        else runOnGameStart = modSettings.optBoolean(SETTING_RUN_ON_GAME_START, true);
 
         JSONObject starSystemFilterList = modSettings.optJSONObject("starSystemFilters");
         if (starSystemFilterList != null) {
@@ -88,9 +89,8 @@ public class SEEDReport {
                             StarSystemFilter newFilter = new StarSystemFilter(starSystemFilterSetting);
                             starSystemFilterMap.put(filterId, newFilter);
                         }
-                    } else {
+                    } else
                         Global.getLogger(SEEDReport.class).warn("Filter '" + filterId + "' in execution order not found in starSystemFilters");
-                    }
                 }
 
                 // Warn about filters defined but not in execution order
@@ -98,9 +98,8 @@ public class SEEDReport {
                     String filterId = iter.next();
                     if (!starSystemFilterMap.containsKey(filterId)) {
                         JSONObject filterSettings = starSystemFilterList.optJSONObject(filterId);
-                        if (filterSettings != null && filterSettings.optBoolean("isEnabled", true)) {
+                        if (filterSettings != null && filterSettings.optBoolean("isEnabled", true))
                             Global.getLogger(SEEDReport.class).warn("Enabled filter '" + filterId + "' not in execution order - will not run");
-                        }
                     }
                 }
             } else {
@@ -162,7 +161,7 @@ public class SEEDReport {
 
         // Run all star system filters (can use planet filter results and other system filter results)
         // Filters are executed in order, so later filters can reference earlier ones via nearSystemFilters
-        Map<String, Set<StarSystemAPI>> starSystemListMap = new HashMap<>();
+        Map<String, Set<StarSystemAPI>> starSystemListMap = new LinkedHashMap<>();
         for (String filterId : starSystemFilterMap.keySet()) {
             StarSystemFilter systemFilter = starSystemFilterMap.get(filterId);
             starSystemListMap.put(filterId, systemFilter.run(centerOfMass, planetFilterResults, starSystemListMap));
@@ -179,14 +178,16 @@ public class SEEDReport {
         StringBuilder filterShorthand = new StringBuilder();
         for (String filterId : starSystemListMap.keySet()) {
             StarSystemFilter systemFilter = starSystemFilterMap.get(filterId);
-            print.append(String.format(SECTION_TITLE_BORDER, systemFilter.filterName));
+            print.append(String.format(SECTION_TITLE_BORDER, systemFilter.saveShorthand != null ? "{%s} ".formatted(systemFilter.saveShorthand) + systemFilter.filterName : systemFilter.filterName));
 
             for (StarSystemAPI system : starSystemListMap.get(filterId)) {
                 print.append(String.format("%s - %s\n", getHyperspaceCoordinates(system), system.getName()));
 
                 // If this filter specifies planet requirements, show which planets matched
-                if ((systemFilter.hasPlanetsRequired != null && !systemFilter.hasPlanetsRequired.isEmpty()) || (systemFilter.hasPlanetsOneOf != null && !systemFilter.hasPlanetsOneOf.isEmpty()) || (systemFilter.hasPlanetsOptional != null && !systemFilter.hasPlanetsOptional.isEmpty())) {
-
+                boolean containsPlanetsRequired = systemFilter.hasPlanetsRequired != null && !systemFilter.hasPlanetsRequired.isEmpty();
+                boolean containsPlanetsOneOf = systemFilter.hasPlanetsOneOf != null && !systemFilter.hasPlanetsOneOf.isEmpty();
+                boolean containsPlanetsOptional = systemFilter.hasPlanetsOptional != null && !systemFilter.hasPlanetsOptional.isEmpty();
+                if (containsPlanetsRequired || containsPlanetsOneOf || containsPlanetsOptional) {
                     Set<PlanetAPI> requiredPlanets = new HashSet<>();
                     Set<PlanetAPI> oneOfPlanets = new HashSet<>();
                     Set<PlanetAPI> optionalPlanets = new HashSet<>();
@@ -195,43 +196,37 @@ public class SEEDReport {
                     Map<PlanetAPI, Set<String>> planetToFilterNames = new HashMap<>();
 
                     // Collect required planets and their filter names
-                    if (systemFilter.hasPlanetsRequired != null) {
-                        for (String planetFilterId : systemFilter.hasPlanetsRequired.keySet()) {
-                            if (planetFilterResults.containsKey(planetFilterId) && planetFilterResults.get(planetFilterId).containsKey(system)) {
-                                PlanetFilter filter = planetFilterMap.get(planetFilterId);
-                                for (PlanetAPI planet : planetFilterResults.get(planetFilterId).get(system)) {
-                                    requiredPlanets.add(planet);
-                                    planetToFilterNames.computeIfAbsent(planet, k -> new HashSet<>()).add(filter.filterName);
-                                }
+                    if (containsPlanetsRequired) for (String planetFilterId : systemFilter.hasPlanetsRequired.keySet())
+                        if (planetFilterResults.containsKey(planetFilterId) && planetFilterResults.get(planetFilterId).containsKey(system)) {
+                            PlanetFilter filter = planetFilterMap.get(planetFilterId);
+                            for (PlanetAPI planet : planetFilterResults.get(planetFilterId).get(system)) {
+                                requiredPlanets.add(planet);
+                                planetToFilterNames.computeIfAbsent(planet, k -> new HashSet<>()).add(filter.filterName);
                             }
                         }
-                    }
+
 
                     // Collect oneOf planets and their filter names
-                    if (systemFilter.hasPlanetsOneOf != null) {
-                        for (String planetFilterId : systemFilter.hasPlanetsOneOf) {
-                            if (planetFilterResults.containsKey(planetFilterId) && planetFilterResults.get(planetFilterId).containsKey(system)) {
-                                PlanetFilter filter = planetFilterMap.get(planetFilterId);
-                                for (PlanetAPI planet : planetFilterResults.get(planetFilterId).get(system)) {
-                                    oneOfPlanets.add(planet);
-                                    planetToFilterNames.computeIfAbsent(planet, k -> new HashSet<>()).add(filter.filterName);
-                                }
+                    if (containsPlanetsOneOf) for (String planetFilterId : systemFilter.hasPlanetsOneOf)
+                        if (planetFilterResults.containsKey(planetFilterId) && planetFilterResults.get(planetFilterId).containsKey(system)) {
+                            PlanetFilter filter = planetFilterMap.get(planetFilterId);
+                            for (PlanetAPI planet : planetFilterResults.get(planetFilterId).get(system)) {
+                                oneOfPlanets.add(planet);
+                                planetToFilterNames.computeIfAbsent(planet, k -> new HashSet<>()).add(filter.filterName);
                             }
                         }
-                    }
+
 
                     // Collect optional planets and their filter names
-                    if (systemFilter.hasPlanetsOptional != null) {
-                        for (String planetFilterId : systemFilter.hasPlanetsOptional) {
-                            if (planetFilterResults.containsKey(planetFilterId) && planetFilterResults.get(planetFilterId).containsKey(system)) {
-                                PlanetFilter filter = planetFilterMap.get(planetFilterId);
-                                for (PlanetAPI planet : planetFilterResults.get(planetFilterId).get(system)) {
-                                    optionalPlanets.add(planet);
-                                    planetToFilterNames.computeIfAbsent(planet, k -> new HashSet<>()).add(filter.filterName);
-                                }
+                    if (containsPlanetsOptional) for (String planetFilterId : systemFilter.hasPlanetsOptional)
+                        if (planetFilterResults.containsKey(planetFilterId) && planetFilterResults.get(planetFilterId).containsKey(system)) {
+                            PlanetFilter filter = planetFilterMap.get(planetFilterId);
+                            for (PlanetAPI planet : planetFilterResults.get(planetFilterId).get(system)) {
+                                optionalPlanets.add(planet);
+                                planetToFilterNames.computeIfAbsent(planet, k -> new HashSet<>()).add(filter.filterName);
                             }
                         }
-                    }
+
 
                     // Print required and oneOf planets (no prefix)
                     Set<PlanetAPI> allMatchingPlanets = new HashSet<>();
@@ -244,17 +239,16 @@ public class SEEDReport {
                     }
 
                     // Print optional planets (with + prefix)
-                    for (PlanetAPI planet : optionalPlanets) {
+                    for (PlanetAPI planet : optionalPlanets)
                         if (!allMatchingPlanets.contains(planet)) {  // Don't duplicate if already shown
                             Set<String> filterNames = planetToFilterNames.get(planet);
                             String filterNameStr = filterNames != null ? String.join(", ", filterNames) : "";
                             print.append(String.format("  + %.0f%%, %s (%s)\n", planet.getMarket().getHazardValue() * 100f, planet.getName(), filterNameStr));
                         }
-                    }
                 }
 
                 // Show required proximity features
-                if (systemFilter.nearSystemFiltersRequired != null && !systemFilter.nearSystemFiltersRequired.isEmpty()) {
+                if (systemFilter.nearSystemFiltersRequired != null && !systemFilter.nearSystemFiltersRequired.isEmpty())
                     for (String systemFilterId : systemFilter.nearSystemFiltersRequired.keySet()) {
                         float maxDistance = systemFilter.nearSystemFiltersRequired.get(systemFilterId);
 
@@ -262,7 +256,7 @@ public class SEEDReport {
                             if (maxDistance <= 0f) {
                                 // System IS in the filter
                                 StarSystemFilter requiredFilter = starSystemFilterMap.get(systemFilterId);
-                                print.append(String.format("  Matches '%s'\n", requiredFilter.filterName));
+                                print.append(String.format("  * Matches '%s'\n", requiredFilter.filterName));
                             } else {
                                 // Find nearest system for display
                                 StarSystemAPI nearestSystem = null;
@@ -276,15 +270,14 @@ public class SEEDReport {
                                 }
                                 if (nearestSystem != null) {
                                     StarSystemFilter requiredFilter = starSystemFilterMap.get(systemFilterId);
-                                    print.append(String.format("  Within %.1f LY of '%s' (%s)\n", nearestDistance, requiredFilter.filterName, nearestSystem.getName()));
+                                    print.append(String.format("  * Within %.1f LY of '%s' (%s)\n", nearestDistance, requiredFilter.filterName, nearestSystem.getName()));
                                 }
                             }
                         }
                     }
-                }
 
                 // Show optional proximity features
-                if (systemFilter.nearSystemFiltersOptional != null && !systemFilter.nearSystemFiltersOptional.isEmpty()) {
+                if (systemFilter.nearSystemFiltersOptional != null && !systemFilter.nearSystemFiltersOptional.isEmpty())
                     for (String systemFilterId : systemFilter.nearSystemFiltersOptional.keySet()) {
                         float maxDistance = systemFilter.nearSystemFiltersOptional.get(systemFilterId);
 
@@ -295,32 +288,26 @@ public class SEEDReport {
 
                             if (maxDistance <= 0f) {
                                 // Check if system IS in the filter
-                                if (starSystemListMap.get(systemFilterId).contains(system)) {
+                                if (starSystemListMap.get(systemFilterId).contains(system)) isNear = true;
+                            } else for (StarSystemAPI filterSystem : starSystemListMap.get(systemFilterId)) {
+                                float distance = Misc.getDistanceLY(filterSystem.getLocation(), system.getLocation());
+                                if (distance <= maxDistance && distance < nearestDistance) {
                                     isNear = true;
-                                }
-                            } else {
-                                // Check proximity
-                                for (StarSystemAPI filterSystem : starSystemListMap.get(systemFilterId)) {
-                                    float distance = Misc.getDistanceLY(filterSystem.getLocation(), system.getLocation());
-                                    if (distance <= maxDistance && distance < nearestDistance) {
-                                        isNear = true;
-                                        nearestSystem = filterSystem;
-                                        nearestDistance = distance;
-                                    }
+                                    nearestSystem = filterSystem;
+                                    nearestDistance = distance;
                                 }
                             }
 
                             if (isNear) {
                                 StarSystemFilter optionalFilter = starSystemFilterMap.get(systemFilterId);
-                                if (maxDistance <= 0f) {
+                                if (maxDistance <= 0f)
                                     print.append(String.format("  + Matches '%s'\n", optionalFilter.filterName));
-                                } else {
+                                else
                                     print.append(String.format("  + Within %.1f LY of '%s' (%s)\n", nearestDistance, optionalFilter.filterName, nearestSystem.getName()));
-                                }
+
                             }
                         }
                     }
-                }
             }
 
             if (systemFilter.saveShorthand != null && !starSystemListMap.get(filterId).isEmpty()) {
@@ -331,11 +318,10 @@ public class SEEDReport {
 
         // Printing exceptional officers
         StringBuilder exceptionalShorthand = new StringBuilder("[");
-        print.append(String.format(SECTION_TITLE_BORDER, "Exceptional officer pod locations"));
+        print.append(String.format(SECTION_TITLE_BORDER, "Exceptional officer pods"));
         if (officersInSalvage.isEmpty()) print.append("No exceptional officer pods found!\n");
         for (SectorEntityToken entity : officersInSalvage) {
-            Object o = entity.getMemoryWithoutUpdate().get(MemFlags.SALVAGE_SPECIAL_DATA);
-            PersonAPI officer = ((SleeperPodsSpecial.SleeperPodsSpecialData) o).officer;
+            PersonAPI officer = ((SleeperPodsSpecial.SleeperPodsSpecialData) entity.getMemoryWithoutUpdate().get(MemFlags.SALVAGE_SPECIAL_DATA)).officer;
 
             print.append(String.format("%s - %s in %s (%s)\n  ", getHyperspaceCoordinates(entity.getContainingLocation()), officer.getName().getFullName(), entity.getFullName(), entity.getContainingLocation().getName()));
 
@@ -361,7 +347,7 @@ public class SEEDReport {
         StringBuilder variantShorthand = new StringBuilder();
         boolean sameTesseractVariants = false;
         if (tesseractStarSystemFilter != null) {
-            print.append(String.format(SECTION_TITLE_BORDER, "Tesseract locations"));
+            print.append(String.format(SECTION_TITLE_BORDER, "Tesseract variants"));
             Set<String> variants = new HashSet<>();
             for (StarSystemAPI system : starSystemListMap.get(tesseractStarSystemFilter)) {
                 print.append(String.format("%s - %s\n", getHyperspaceCoordinates(system), system.getName()));
@@ -369,8 +355,14 @@ public class SEEDReport {
                 for (SectorEntityToken entity : system.getAllEntities()) {
                     if (!entity.hasTag(Tags.CORONAL_TAP)) continue;
 
-                    CampaignFleetAPI defenders = generateSalvageDefenders(entity);
-                    if (defenders == null) continue;
+                    CampaignFleetAPI defenders;
+                    try {
+                        defenders = generateSalvageDefenders(entity);
+                    } catch (RuntimeException e) {
+                        print.append("  Error occured while generating defenders for this Coronal Hypershunt; skipping defender printing\n");
+                        continue;
+                    }
+                    if (defenders == null || defenders.getMembersWithFightersCopy() == null) continue;
 
                     for (FleetMemberAPI member : defenders.getMembersWithFightersCopy()) {
                         ShipVariantAPI variant = member.getVariant();
@@ -387,9 +379,8 @@ public class SEEDReport {
         print.append(String.format(REPORT_BORDER, Global.getSector().getSeedString()));
 
         if (!filterShorthand.isEmpty() || exceptionalFilterPass || sameTesseractVariants) {
+            String seedString = createSeedString(exceptionalFilterPass, sameTesseractVariants, exceptionalShorthand, variantShorthand, filterShorthand);
             try {
-                String seedString = createSeedString(exceptionalFilterPass, sameTesseractVariants, exceptionalShorthand, variantShorthand, filterShorthand);
-
                 JSONObject json;
                 if (Global.getSettings().fileExistsInCommon(REPORT_FILE_NAME)) {
                     json = Global.getSettings().readJSONFromCommon(REPORT_FILE_NAME, false);
@@ -402,21 +393,21 @@ public class SEEDReport {
                     versionSeeds.put(seedString);
                 }
                 Global.getSettings().writeJSONToCommon(REPORT_FILE_NAME, json, false);
-
-                if (!filterShorthand.isEmpty())
-                    print.append("\nFound a system or planet matching a \"saveShorthand\" filter!");
-
-                if (exceptionalFilterPass)
-                    print.append("\nFound a combination of exceptional officers with the specified requirements!");
-
-                if (sameTesseractVariants)
-                    print.append("\nFound all Tesseract variants to be identical! Defeat them in-battle to verify their weapon drops!");
-
-                print.append(String.format("\nWrote seed to Starsector/saves/common/%s:\n\"%s\"", REPORT_FILE_NAME, seedString));
             } catch (JSONException | IOException e) {
                 print.append("\nFailed to write seed to file!");
                 return print.toString();
             }
+
+            if (!filterShorthand.isEmpty())
+                print.append("\nFound a system or planet matching a \"saveShorthand\" filter!");
+
+            if (exceptionalFilterPass)
+                print.append("\nFound a combination of exceptional officers with the specified requirements!");
+
+            if (sameTesseractVariants)
+                print.append("\nFound all Tesseract variants to be identical! Defeat them in-battle to verify their weapon drops!");
+
+            print.append(String.format("\nWrote seed to Starsector/saves/common/%s:\n\"%s\"", REPORT_FILE_NAME, seedString));
         }
 
         return print.toString();
